# git_gui

./: .eslintrc.cjs  .eslintrc.js  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
patches/: monaco-editor+0.36.1.patch
src/: App.css  App.svelte  App.tsx  Grid.module.css  Grid.tsx  Repo.module.css  Repo.tsx  index.tsx  main.rs  main.ts  positioned_commit.rs  quickStyles.css.ts  quickStyles.ts  repoState.ts  rxState.ts  style.css  style.css.ts  tauriRx.ts  window.rs
src-solid/: App.tsx  quickStyles.css.ts  rxState.ts  style.css.ts  tauriRx.ts
src-solid/Repo/: RepoHeader.tsx
src-solid/Repo/DetailPanel/: ActiveCommitChanges.css.ts  ActiveCommitChanges.tsx  CommitDetails.css.ts  CommitDetails.tsx  WorkingDirectory.css.ts  index.ts  workingDirectoryState.ts
src-solid/Repo/RepoGrid/: GraphColumn.tsx  RepoGrid.css.ts  SummaryColumn.css.ts  SummaryColumn.tsx  activeCommit.ts  itemHeight.ts
src-solid/components/Tabs/: FullTabs.css.ts  FullTabs.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: http_server.rs  main.rs  positioned_commit.rs  settings.rs  timer.rs
src-tauri/src/commands/: checkout.rs  commit.rs  diff_settings.rs  fetch.rs  get_commit.rs  get_commits.rs  get_diff.rs  get_history.rs  get_last_repo.rs  get_refs.rs  get_repo_name.rs  get_working_dir.rs  mod.rs  open_repo.rs  stage_unstage.rs  watch_repo.rs
src-tauri/src/commands/serializer/: delta.rs  git_error.rs  mod.rs
src/Repo/: DetailPanel.css.ts  DetailPanel.tsx  ObjectsPanel.tsx  Repo.css.ts  Repo.module.css  Repo.svelte  Repo.tsx  RepoGrid.css.ts  RepoGrid.module.css  RepoGrid.tsx  RepoHeader.svelte  RepoHeader.tsx  index.ts  refsLookup.ts  repoState.ts
src/Repo/DetailPanel/: ActiveCommitChanges.tsx  CommitAuthor.svelte  CommitChangeCount.svelte  CommitChanges.svelte  CommitDetails.css.ts  CommitDetails.svelte  CommitDetails.tsx  CommitHeader.svelte  CommitLink.svelte  DeltaSummaryLine.css.ts  DeltaSummaryLine.tsx  DetailPanel.css.ts  DetailPanel.svelte  DetailPanel.tsx  FileDelta.svelte  WDCreateCommit.svelte  WDStagingList.svelte  WorkingDirectory.css.ts  WorkingDirectory.svelte  WorkingDirectory.tsx  activeCommitChangesState.ts  commitChanges.css.ts  detailPanel.css.ts  fileDelta.css.ts  workingDirectoryState.ts
src/Repo/DiffView/: BinaryDiffView.svelte  DiffHunk.svelte  DiffView.svelte  DiffViewHunk.svelte  DiffViewHunkContent.svelte  DiffViewLines.svelte  DiffViewSplit.svelte  DiffViewUnified.svelte  ImageDiffOpacity.svelte  ImageDiffView.svelte  ImageLinkedDiff.svelte  ImageOverlayDiff.svelte  ImageSideBySide.svelte  ImageSingleView.svelte  ProgressiveImage.svelte  diffLines.ts  diffView.css.ts  diffViewHunks.ts  diffViewState.ts  highlightSyntax.ts  imageDiff.css.ts  svelte.tmLanguage.json  svelte.tmLanguage.src.yaml
src/Repo/History/: History.svelte  HistoryCommit.svelte  history.css.ts  (+2 more)
src/components/: ButtonGroup.svelte  FullTabs.svelte  ZoomContainer.svelte  ZoomContainerStore.ts
src/lib/: gestureEvent.ts  rxState.ts  tauriRx.ts
src/ui/: commit_list.rs  mod.rs
(+22 files in other folders)
