[package]
name = "git_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = {version = "0.21.0", features=["default_fonts"]}
egui-winit = "0.21.1"
egui_glow = { version = "0.21.0", features = ["winit"] }
git2 = "0.16.1"
glow = "0.12.0"
glutin = "0.30.6"
glutin-winit = "0.3.0"
itertools = "0.10.5"
raw-window-handle = "0.5.0"
tracing = "0.1.37"
