[package]
name = "git-gui-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["clipboard-write-text", "dialog", "dialog-confirm", "dialog-message", "shell-open"] }
git2 = "0.16.1"
itertools = "0.10.5"
derivative = "2.2.0"
md5 = "0.7.0"
memoize = "0.4.0"
notify = { version = "5.1.0", features = ["serde"] }
logging_timer = "1.1.0"
env_logger = "0.10.0"
port_check = "0.1.5"
rocket = "=0.5.0-rc.3"
mime-sniffer = "0.1.2"
log = "0.4.17"
image = "0.24.6"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
